--- a/templates/node_admin.html
+++ b/templates/node_admin.html
@@ -199,7 +199,7 @@
                             </option>
                             {% endfor %}
 
-                        </select> <nobr/> | <nobr/>
+                        </select> |
 
                         <select class="8F" onchange="update_param(this)" style="width: 30%">
 
@@ -209,7 +209,7 @@
                             </option>
                             {% endfor %}
 
-                        </select> <nobr/> | <nobr/>
+                        </select> | 
 
                         <select class="8D" onchange="update_param(this)" style="width: 30%">
 
