--- a/static/css/node_admin.css
+++ b/static/css/node_admin.css
@@ -7,6 +7,8 @@ td select {
   font-size: 100%;
   font-family: 'special_eliteregular';
   text-align-last: center;
+  background: none;
+  color: inherit;
 }
 
 th, input {
