--- a/templates/node_admin.html
+++ b/templates/node_admin.html
@@ -48,7 +48,7 @@
 
         <label style="float: right;"><input type="checkbox" id="do_broadcast" onclick="enable_broadcast(this)" /> BROADCAST </label>
 
-        <div class="table-wrapper" style="font-size: 75%">
+        <div class="node_table">
 
           <table>
 
@@ -74,7 +74,7 @@
                 {% for node in node_status %}
                 <tr class="row" id="{{ node.node | safe }}">
 
-                    <td disabled > {{ node.node[12:] | safe }} </td>
+                    <td disabled > {{ node.node[12:14] | safe }} {{ node.node[14:] | safe }} </td>
                     <td>
 
                         <select onchange="update_controller(this)">
@@ -209,7 +209,7 @@
                             </option>
                             {% endfor %}
 
-                        </select> | 
+                        </select> |
 
                         <select class="8D" onchange="update_param(this)" style="width: 30%">
 
