--- a/templates/node_admin.html
+++ b/templates/node_admin.html
@@ -59,12 +59,12 @@
                   <th class="header"> location </th>
                   <th class="header"> config </th>
                   <th class="header"> team </th>
-                  <th class="header broadcast"> capture time </th>
-                  <th class="header broadcast"> capture assist </th>
-                  <th class="header "> point scale </th>
-                  <th class="header broadcast"> medic time </th>
+                  <th class="header broadcast"> capture<br/>time </th>
+                  <th class="header broadcast"> capture<br/>assist </th>
+                  <th class="header "> point<br/>scale </th>
+                  <th class="header broadcast"> medic<br/>time </th>
                   <th class="header broadcast"> medic </th>
-                  <th class="header broadcast"> Bomb</br>FUS  |  ARM  |  DIS </th>
+                  <th class="header broadcast"> Bomb<br/>FUS &nbsp;&nbsp;|&nbsp;&nbsp; ARM &nbsp;&nbsp;|&nbsp;&nbsp; DIS </th>
 
               </tr>
             </thead>
