add an option for NO LOCATION

--- a/templates/node_admin.html
+++ b/templates/node_admin.html
@@ -79,6 +79,7 @@
 
                         <select onchange="update_controller(this)">
 
+                          <option value=""/>
                           {% for opt in cmd_args['SET LOCATION'] %}
                             <option {{ 'selected' if opt['text'] == node.location }}>
                               {{ opt['text'] }}
