run update location from html in order to pass arguments

--- a/templates/node_admin.html
+++ b/templates/node_admin.html
@@ -235,5 +235,6 @@
 </body>
 
 <script src="../static/js/node_admin.js"></script>
+<script> update_location_tree({{ cmd_args['SET LOCATION'] }});</script>
 
 {% endblock %}
