fill table cell burnt orange if bomb is armed

--- a/templates/node_admin.html
+++ b/templates/node_admin.html
@@ -188,7 +188,7 @@
 
                     </td>
 
-                    <td nowrap>
+                    <td nowrap {% if node.bomb_status == 186 %} style="background-color: #CC550080" {% endif %}>
 
                         <select class="8B" onchange="update_param(this)" style="width: 30%">
 
