following a better tutorial

--- a/src/app/global/header/header.component.html
+++ b/src/app/global/header/header.component.html
@@ -69,7 +69,11 @@
                     <a class="nav-link" id="secure_nav_currentgame" [routerLink]="['/secure/start-game']">Start Games</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" id="secure_nav_mygame" [routerLink]="['/secure/manage-game']">Manage Games</a>
+                    <a class="nav-link" id="secure_nav_mygame" [routerLink]="['/secure/manageGame']">Manage Games</a>
+                </li>
+
+                <li class="nav-item">
+                    <a class="nav-link" id="secure_nav_mygame" [routerLink]="['/secure/mydevices']">My Devices</a>
                 </li>
             </ul>
 
