Some slight tweaking and learning.

--- a/src/app/non-secure/field-info/field-info.component.html
+++ b/src/app/non-secure/field-info/field-info.component.html
@@ -17,12 +17,12 @@
                             <a href="#">Enhanced Safety</a>
                         </h4>
                         <p class="blog-card-description">Deploy marshals to maintain player safety and fair gameplay -
-                            let our system worry about keeping track of who’s where and done what. <span
+                            let our system worry about keeping track of gameplay. <span
                                 id="dots-tab1">...</span><span id="more-tab1">Our system maintains accurate point tally,
                                 objective control status, and general gameplay accountability among as many objectives
-                                you want, which allows marshals to focus on player safety rather than get distracted
-                                verifying objective ownership or other sundry gameday tasks that should be and are
-                                automated by Skirmesh gaming systems.</span></p>
+                                you want, which allows marshals to focus on player safety rather than become distracted
+                                verifying objective ownership or other sundry gameday tasks that should be-and are-automated
+                                by Skirmesh gaming systems.</span></p>
                         <div class="ftr">
                             <div class="author">
                                 <button id="btn-tab1" class="btn btn-outline-success" (click)="tab1LearnMore()">Learn More </button>
@@ -44,7 +44,7 @@
                         <h4 class="blog-card-caption">
                             <a href="#">Fan Favorite Missions - Digitized</a>
                         </h4>
-                        <p class="blog-card-description">Point Capture. Bomb. Medic stations and more. All digitized,
+                        <p class="blog-card-description">Point Capture. Bombs/IEDs. Medic stations and more. All digitized,
                             overlaid on your field map, and linked to the cloud to allow the Commanding Officers,
                             players, or anyone in the world to watch the action in real time. <span
                                 id="dots-tab2">...</span><span id="more-tab2">Games are easy to start, pause, stop,
@@ -58,7 +58,7 @@
                                 an assault to steer the fight or allow teams to capture, destroy entire objectives to
                                 remove them from play, and establish forward operating bases complete with a medic
                                 station to enhance the team footprint and dominance on the field. Every detail is
-                                configurable in real time to provide the gameplay mastermind the ability to shift the
+                                configurable in real time to provide the gameplay designer the ability to shift the
                                 fight on the fly.
 
                                 Simply put, this system gives purpose and structure to otherwise chaotic
@@ -91,7 +91,7 @@
                                 As we continue to develop the system, we will provide more detail and coverage of stats
                                 and actions.
 
-                                Fields can better understand customer acquisition as we will can identify unique and
+                                Fields can better understand customer acquisition as we can identify unique and
                                 repeat customers to provide a broad based customer value datastream.</span></p>
                         <div class="ftr">
                             <div class="author">
@@ -111,35 +111,33 @@
                     <input class="form-control" id="name2" name="name" onblur="if(this.value == '') this.value='Name'" onfocus="if(this.value == 'Name') this.value=''" type="text" value="Name">
                     <div class="error" id="err-name" style="display: none;">Please enter name</div>
                   </div> <!-- /Form-name -->
-        
+
                   <div class="form-group">
                     <label for="email2">Email</label>
                     <input class="form-control" id="email2" name="email" type="text" onfocus="if(this.value == 'E-mail') this.value='';" onblur="if(this.value == '') this.value='E-mail';" value="E-mail">
-                    <div class="error" id="err-emailvld" style="display: none;">E-mail is not a valid format</div> 
+                    <div class="error" id="err-emailvld" style="display: none;">E-mail is not a valid format</div>
                   </div> <!-- /Form-email -->
-        
+
                   <div class="form-group">
                     <label for="message2">Message</label>
                     <textarea class="form-control" id="message2" name="message" rows="5" onblur="if(this.value == '') this.value='Message'" onfocus="if(this.value == 'Message') this.value=''">Message</textarea>
-        
+
                     <div class="error" id="err-message" style="display: none;">Please enter message</div>
                   </div> <!-- /col -->
-        
-                  <div class="row">            
+
+                  <div class="row">
                     <div class="col-xs-12">
                       <div id="ajaxsuccess" class="text-success">E-mail was successfully sent.</div>
-                      <div class="error" id="err-form" style="display: none;">There was a problem validating the form please check!</div>
+                      <div class="error" id="err-form" style="display: none;">There was a problem validating the form - please check it!</div>
                       <div class="error" id="err-timedout">The connection to the server timed out!</div>
                       <div class="error" id="err-state"></div>
                       <button type="submit" class="btn btn-primary btn-shadow btn-rounded w-md " id="send">Submit</button>
                     </div> <!-- /col -->
                   </div> <!-- /row -->
-        
+
                 </form> <!-- /form -->
               </div> <!-- end col -->
         </div>
-        
+
     </div>
 </div>
-
-
