--- a/src/app/auth/sign-up/sign-up.component.html
+++ b/src/app/auth/sign-up/sign-up.component.html
@@ -62,7 +62,7 @@
 								<div id="callSign" class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-12">
 									<div class="form-group">
 										<input formControlName="callSign" id="userName" type="text" class="form-control"
-											placeholder="CallSign">
+											placeholder="Callsign">
 									</div>
 									<div *ngIf="callSign.invalid && (callSign.dirty || callSign.touched) "
 										class="alert alert-danger ">
@@ -124,7 +124,7 @@
 									<i class="fa fa-arrow-right cust_skirmesh_arrow" aria-hidden="true"></i>
 								</button>
 							</div>
-							<div class="row"> 
+							<div class="row">
 								<div id="userCreatedMessage" class="alert alert-primary d-none center-cust">
 								   Your user is created!<br>
 								   Go ahead to <a [routerLink]="['/auth/login']" >login</a>.
@@ -132,8 +132,8 @@
 								<div id="userCreatFaileddMessage" class="alert alert-danger d-none center-cust">
 								   We are sorry we were not able to create your account at this time <br>
 								   Please try again or <a [routerLink]="['/non-secure/contact-us']" >contact us from our contact us page</a>
-								</div> 
-							 </div>	
+								</div>
+							 </div>
 						</form>
 						<div id="or" class="or">
 							<span>or signup using</span>
